# IHaskell

./: .dockerignore  .ghci  .gitignore  .travis.yml  Dockerfile  Haskell-Notebook.ipynb  HaskellParser.y.pp  Hspec.hs  IHaskell Test.ipynb  IHaskell.cabal  IHaskell.ipynb  LICENSE  Main.hs  README.md  Setup.hs  Untitled0.ipynb  Widget List.ipynb  abc.sh  build-parser.sh  build.sh  cabal.project  circle.yml  default-9.10.nix  flake.nix  ghci.sh  hie.yaml  ihaskell.cabal  ihaskell.ghci  ihaskell_python_updater.sh  interface.notes  ipython_updater.sh  linux-install.sh  macos-install.sh  python_updater.sh  release-8.10.nix  release-8.2.nix  release-8.4.nix  release-8.6.nix  release-8.8.nix  release-9.0.nix  (+25 more)
.ci/: upload-to-cachix.sh
.github/workflows/: ci.yml  docker.yml  nix.yml  stack-nix.yml  stack.yml  update-flake-lock.yml
IHaskell/: Completion.hs  Config.hs  Display.hs  IPython.hs  MessageParser.hs  Types.hs  ZeroMQ.hs
IHaskell/Eval/: Completion.hs  Evaluate.hs  Info.hs  Lint.hs  Parser.hs
IHaskell/Message/: BodyParser.hs  Parser.hs  UUID.hs  Writer.hs
config/: ipython_config.py  ipython_notebook_config.py  ipython_qtconsole_config.py
demo/: IHaskell.html  IHaskell.ipynb  Static Canvas IHaskell Display.html
docker/: Dockerfile
ghc-parser/: HaskellParser.y.pp  HaskellParser7101.y.pp  HaskellParser76.y.pp  HaskellParser782.y.pp  HaskellParser783.y.pp  Setup.hs  build-parser.sh  ghc-parser.cabal
ghci-lib/: ghci-lib.cabal
html/: custom.css  custom.js  kernel.js
ihaskell-display/ihaskell-aeson/: ihaskell-aeson.cabal  stack.yaml
ihaskell-display/ihaskell-aeson/IHaskell/Display/: Aeson.hs
ihaskell-display/ihaskell-basic/: README.md  ihaskell-basic.cabal  ihaskell-display.cabal
ihaskell-display/ihaskell-blaze/: ihaskell-blaze.cabal  stack.yaml
ihaskell-display/ihaskell-charts/: Test.ipynb  ihaskell-charts.cabal  stack.yaml
ihaskell-display/ihaskell-diagrams/: DiagramsExample.ipynb  Test.ipynb  ihaskell-diagrams.cabal  stack.yaml
ihaskell-display/ihaskell-frames/: LICENSE  ihaskell-frames.cabal
ihaskell-display/ihaskell-gnuplot/: GnuplotExample.ipynb  ihaskell-gnuplot.cabal  stack.yaml
ihaskell-display/ihaskell-gnuplot/IHaskell/Display/: Gnuplot.hs
ihaskell-display/ihaskell-graphviz/: LICENSE  ihaskell-graphviz.cabal  stack.yaml
ihaskell-display/ihaskell-hatex/: README.md  ihaskell-hatex.cabal
ihaskell-display/ihaskell-hatex/IHaskell/Display/: Hatex.hs
ihaskell-display/ihaskell-image/: ihaskell-image.cabal  test.ipynb
ihaskell-display/ihaskell-juicypixels/: ihaskell-juicypixels.cabal  stack.yaml  test.ipynb
ihaskell-display/ihaskell-juicypixels/IHaskell/Display/: Juicypixels.hs
ihaskell-display/ihaskell-magic/: README.md  ihaskell-magic.cabal  stack.yaml
ihaskell-display/ihaskell-matplotlib/: LICENSE  MatplotlibExample.ipynb  ihaskell-matplotlib.cabal
ihaskell-display/ihaskell-parsec/: ihaskell-parsec.cabal  widget.html  widget.js
ihaskell-display/ihaskell-plot/: PlotExample.ipynb  ihaskell-plot.cabal  stack.yaml
ihaskell-display/ihaskell-plot/IHaskell/Display/: Plot.hs
ihaskell-display/ihaskell-rlangqq/: LICENSE  ihaskell-rlangqq.cabal  stack.yaml
ihaskell-display/ihaskell-rlangqq/IHaskell/Display/: Rlangqq.hs
ihaskell-display/ihaskell-static-canvas/: LICENSE  ihaskell-static-canvas.cabal  stack.yaml
ihaskell-display/ihaskell-widgets/: .gitignore  ChangeLog.md  LICENSE  MsgSpec.md  README.md  ihaskell-widgets.cabal  stack.yaml
ihaskell-display/ihaskell-widgets/Examples/: 00 Introduction to Widgets.ipynb  Bool Widgets.ipynb  Box Widgets.ipynb  Controller.ipynb  IPywidgets in IHaskell.ipynb  Image Widget.ipynb  Introduction to Widgets.ipynb  Layout Widget.ipynb  Layout and Style.ipynb  Link Widgets.ipynb  Media Widgets.ipynb  Numeric Widgets.ipynb  Other Widgets.ipynb  Output Widget.ipynb  Picker Widgets.ipynb  Plotting UI.ipynb  Selection Widgets.ipynb  String Widgets.ipynb  Widget List.ipynb
ihaskell-display/ihaskell-widgets/IHaskell/: Widgets.hs
ihaskell-juicypixels/: LICENSE  ihaskell-juicypixels.cabal
ihaskell_labextension/: README.md  package-lock.json  package.json  tsconfig.json
ihaskell_labextension/src/: codemirror-ihaskell.ts  index.ts
installation/: ipython.sh  run.sh  update.sh  virtualenv.sh
ipython-kernel/: ipython-kernel.cabal  stack.yaml
ipython-kernel/example-data/: calc_profile.tar
ipython-kernel/examples/: Calc.hs  Simple.hs
ipython-kernel/src/IHaskell/IPython/: EasyKernel.hs  Kernel.hs  Stdin.hs  Types.hs  ZeroMQ.hs
ipython-kernel/src/IHaskell/IPython/Message/: Parser.hs  UUID.hs  Writer.hs
ipython-kernel/src/IPython/: Kernel.hs  Stdin.hs  Types.hs  ZeroMQ.hs
ipython-kernel/src/IPython/Message/: Parser.hs  UUID.hs  Writer.hs
jupyterlab-ihaskell/: README.md  package-lock.json  package.json  shell.nix  tsconfig.json  webpack.config.js
jupyterlab-ihaskell/labextension/: package.json
jupyterlab-ihaskell/src/: codemirror-ihaskell.ts  index.ts
kernelspec/: kernel.js
main/: IHaskellPrelude.hs  Main.hs
nix/: displays.nix  ihaskell-overlay.nix  ihaskell-src.nix  mkDevShell.nix  overlay-8.10.nix  overlay-9.0.nix  overlay-9.10.nix  overlay-9.12.nix  overlay-9.14.nix  overlay-9.2.nix  overlay-9.4.nix  overlay-9.6.nix  overlay-9.8.nix  release.nix
notebooks/: Conjugate Gradient.ipynb  Diagrams.ipynb  Gradient Descent.ipynb  Gradient-Descent.ipynb  Homophones.ipynb  IHaskell.ipynb  Static Canvas IHaskell Display.ipynb  Test.ipynb
profile/: .profile_version  ipython_config.py  ipython_console_config.py  profile.tar
profile/templates/: html_ihaskell.tpl  ihaskell-basic.tpl  ihaskell.tpl
src/: Hspec.hs  IHaskellPrelude.hs  Main.hs  StringUtils.hs
src/IHaskell/: BrokenPackages.hs  CSS.hs  Convert.hs  Display.hs  Flags.hs  IPython.hs  Publish.hs  Types.hs  ZeroMQ.hs
src/Jupyter/: IHaskell.hs
src/tests/: Hspec.hs
stack/: stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml  stack-9.0.yaml  stack-9.2.yaml  stack-9.4.yaml  stack-9.6.yaml
test/: .gitignore  acceptance.nbconvert.in.ipynb  acceptance.nbconvert.sh
tests/: Test.hs
(+182 files in other folders)
