-- The name of the package.
name:                ihaskell

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.2.0.5

-- A short (one-line) description of the package.
synopsis:            A Haskell backend kernel for the IPython project.

-- A longer description of the package.
description:         IHaskell is a Haskell backend kernel for the IPython project. This allows using Haskell via 
                     a console or notebook interface. Additional packages may be installed to provide richer data visualizations. 

-- URL for the project homepage or repository.
homepage:            http://gibiansky.github.io/IHaskell/

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Andrew Gibiansky

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          andrew.gibiansky@gmail.com

-- A copyright notice.
-- copyright:           

category:            Development

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.8

data-files: 
  profile/profile.tar

library
  hs-source-dirs:      src
  build-depends:       base ==4.6.*,
                       hlint,
                       cmdargs >= 0.10,
                       tar,
                       ghc-parser,
                       unix >= 2.6,
                       hspec,
                       zeromq4-haskell >= 0.1,
                       aeson >=0.6,
                       MissingH >=1.2,
                       classy-prelude >=0.7,
                       bytestring >=0.10,
                       uuid >=1.2.6,
                       containers >=0.5,
                       ghc ==7.6.*,
                       ghc-paths ==0.1.*,
                       random >=1.0,
                       split >= 0.2,
                       utf8-string,
                       strict >=0.3,
                       shelly >=1.3,
                       system-argv0,
                       directory,
                       here,
                       system-filepath,
                       filemanip,
                       filepath,
                       exceptions,
                       cereal ==0.3.*,
                       text >=0.11,
                       mtl >= 2.1
  exposed-modules: IHaskell.Display,
                   Paths_ihaskell,
                   IHaskell.Types,
                   IHaskell.Message.UUID

executable IHaskell
  -- .hs or .lhs file containing the Main module.
  hs-source-dirs:      src
  main-is:             Main.hs

  build-tools:         happy, cpphs
  
  -- Modules included in this executable, other than Main.
  other-modules:       
             IHaskell.Eval.Lint
             IHaskell.Eval.Completion
             IHaskell.Eval.Info
             IHaskell.Eval.Evaluate
             IHaskell.Eval.Parser
             IHaskell.IPython
             IHaskell.Message.Parser
             IHaskell.Message.UUID
             IHaskell.Message.Writer
             IHaskell.Types
             IHaskell.ZeroMQ
             IHaskell.Display

  extensions: DoAndIfThenElse
  
  -- Other library packages from which modules are imported.
  build-depends:       base ==4.6.*,
                       hlint,
                       cmdargs >= 0.10,
                       tar,
                       ghc-parser,
                       unix >= 2.6,
                       hspec,
                       zeromq4-haskell >= 0.1,
                       aeson >=0.6,
                       MissingH >=1.2,
                       classy-prelude >=0.7,
                       bytestring >=0.10,
                       uuid >=1.2.6,
                       containers >=0.5,
                       ghc ==7.6.*,
                       ghc-paths ==0.1.*,
                       random >=1.0,
                       split >= 0.2,
                       utf8-string,
                       strict >=0.3,
                       shelly >=1.3,
                       system-argv0,
                       directory,
                       here,
                       system-filepath,
                       filemanip,
                       filepath,
                       cereal ==0.3.*,
                       text >=0.11,
                       mtl >= 2.1

Test-Suite hspec
  hs-source-dirs:      src
  Type:     exitcode-stdio-1.0
  Ghc-Options: -threaded
  Main-Is: Hspec.hs
  build-depends:       base ==4.6.*,
                       hlint,
                       cmdargs >= 0.10,
                       tar,
                       ghc-parser,
                       unix >= 2.6,
                       hspec,
                       zeromq4-haskell >= 0.1,
                       aeson >=0.6,
                       MissingH >=1.2,
                       classy-prelude >=0.7,
                       bytestring >=0.10,
                       uuid >=1.2.6,
                       containers >=0.5,
                       ghc ==7.6.*,
                       ghc-paths ==0.1.*,
                       random >=1.0,
                       split >= 0.2,
                       utf8-string,
                       strict >=0.3,
                       shelly >=1.3,
                       system-argv0,
                       directory,
                       here,
                       system-filepath,
                       filemanip,
                       filepath,
                       cereal ==0.3.*,
                       text >=0.11,
                       mtl >= 2.1
  extensions: DoAndIfThenElse
              OverloadedStrings
              ExtendedDefaultRules

source-repository head
  type:     git
  location: git://github.com/gibiansky/IHaskell.git
