-- The name of the package.
name:                ihaskell

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.3.0.0

-- A short (one-line) description of the package.
synopsis:            A Haskell backend kernel for the IPython project.

-- A longer description of the package.
description:         IHaskell is a Haskell backend kernel for the IPython project. This allows using Haskell via 
                     a console or notebook interface. Additional packages may be installed to provide richer data visualizations. 

-- URL for the project homepage or repository.
homepage:            http://gibiansky.github.io/IHaskell/

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Andrew Gibiansky

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          andrew.gibiansky@gmail.com

-- A copyright notice.
-- copyright:           

category:            Development

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.16

data-files: 
  profile/profile.tar

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       
                       base                 ==4.6.*,
                       aeson                >=0.6,
                       base64-bytestring    >=1.0,
                       bytestring           >=0.10,
                       cereal               ==0.3.*,
                       classy-prelude       >=0.7,
                       cmdargs              >=0.10,
                       containers           >=0.5,
                       directory            -any,
                       filepath             -any,
                       ghc                  ==7.6.*,
                       ghc-parser           -any,
                       ghc-paths            ==0.1.*,
                       haskeline            -any,
                       here                 -any,
                       hlint                -any,
                       hspec                -any,
                       HTTP                 -any,
                       HUnit                -any,
                       ipython-kernel       -any,
                       MissingH             >=1.2,
                       mtl                  >=2.1,
                       parsec               -any,
                       process              >=1.1,
                       random               >=1.0,
                       shelly               >=1.3,
                       split                >= 0.2,
                       strict               >=0.3,
                       system-argv0         -any,
                       system-filepath      -any,
                       tar                  -any,
                       transformers         -any,
                       unix                 >= 2.6,
                       utf8-string          -any

  exposed-modules: IHaskell.Display
                   IHaskell.Eval.Completion
                   IHaskell.Eval.Evaluate
                   IHaskell.Eval.Info
                   IHaskell.Eval.Lint
                   IHaskell.Eval.Parser
                   IHaskell.Eval.Hoogle
                   IHaskell.Eval.ParseShell
                   IHaskell.Eval.Util
                   IHaskell.IPython
                   IHaskell.Flags
                   IHaskell.Types
                   Paths_ihaskell

executable IHaskell
  -- .hs or .lhs file containing the Main module.
  hs-source-dirs:      src
  main-is:             Main.hs

  build-tools:         happy, cpphs
  
  -- Modules included in this executable, other than Main.
  other-modules:       
             IHaskell.Eval.Lint
             IHaskell.Eval.Completion
             IHaskell.Eval.Info
             IHaskell.Eval.Evaluate
             IHaskell.Eval.Parser
             IHaskell.Eval.Hoogle
             IHaskell.Eval.ParseShell
             IHaskell.Eval.Util
             IHaskell.IPython
             IHaskell.Flags
             IHaskell.Types
             IHaskell.Display

  default-extensions: DoAndIfThenElse
  
  -- Other library packages from which modules are imported.
  default-language:    Haskell2010
  build-depends:       
                       base                 ==4.6.*,
                       aeson                >=0.6,
                       base64-bytestring    >=1.0,
                       bytestring           >=0.10,
                       cereal               ==0.3.*,
                       classy-prelude       >=0.7,
                       cmdargs              >=0.10,
                       containers           >=0.5,
                       directory            -any,
                       filepath             -any,
                       ghc                  ==7.6.*,
                       ghc-parser           -any,
                       ghc-paths            ==0.1.*,
                       haskeline            -any,
                       here                 -any,
                       hlint                -any,
                       hspec                -any,
                       HTTP                 -any,
                       HUnit                -any,
                       ipython-kernel       -any,
                       MissingH             >=1.2,
                       mtl                  >=2.1,
                       parsec               -any,
                       process              >=1.1,
                       random               >=1.0,
                       shelly               >=1.3,
                       split                >= 0.2,
                       strict               >=0.3,
                       system-argv0         -any,
                       system-filepath      -any,
                       tar                  -any,
                       transformers         -any,
                       unix                 >= 2.6,
                       utf8-string          -any

Test-Suite hspec
  hs-source-dirs:      src
  Type:     exitcode-stdio-1.0
  Ghc-Options: -threaded
  Main-Is: Hspec.hs
  default-language:    Haskell2010
  build-depends:       
                       base                 ==4.6.*,
                       aeson                >=0.6,
                       base64-bytestring    >=1.0,
                       bytestring           >=0.10,
                       cereal               ==0.3.*,
                       classy-prelude       >=0.7,
                       cmdargs              >=0.10,
                       containers           >=0.5,
                       directory            -any,
                       filepath             -any,
                       ghc                  ==7.6.*,
                       ghc-parser           -any,
                       ghc-paths            ==0.1.*,
                       haskeline            -any,
                       here                 -any,
                       hlint                -any,
                       hspec                -any,
                       HTTP                 -any,
                       HUnit                -any,
                       ipython-kernel       -any,
                       MissingH             >=1.2,
                       mtl                  >=2.1,
                       parsec               -any,
                       process              >=1.1,
                       random               >=1.0,
                       shelly               >=1.3,
                       split                >= 0.2,
                       strict               >=0.3,
                       system-argv0         -any,
                       system-filepath      -any,
                       tar                  -any,
                       transformers         -any,
                       unix                 >= 2.6,
                       utf8-string          -any

  extensions: DoAndIfThenElse
              OverloadedStrings
              ExtendedDefaultRules

source-repository head
  type:     git
  location: git://github.com/gibiansky/IHaskell.git
