name:                ihaskell
version:             0.9.0.0
synopsis:            A Haskell Jupyter kernel.
description:         IHaskell is a Haskell backend kernel for the Jupyter project. This allows using Haskell via
                     a console or notebook interface. Additional packages may be installed to provide richer data visualizations.
homepage:            http://github.com/gibiansky/ihaskell
license:             MIT
license-file:        LICENSE
author:              Andrew Gibiansky
maintainer:          andrew.gibiansky@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.16
data-files:
    kernelspec/kernel.js
    kernelspec/logo-64x64.png

source-repository head
  type:     git
  location: git://github.com/gibiansky/IHaskell.git

flag binPkgDb
  default:             True
  description:         bin-package-db package needed (needed for GHC >= 7.10)

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
                       aeson                >=0.7 && < 0.12,
                       base                 >=4.6 && <= 4.9,
                       containers           >= 0.5,
                       bytestring           >= 0.5,
                       jupyter              >= 0.9,
                       transformers         >= 0.4,
                       ghc                  -any,
                       mtl                  >= 2.0,
                       text                 >= 1.2,
                       directory                 >= 1.2,
                       megaparsec,
                       semigroups,
                       extra
  exposed-modules:
                       Jupyter.IHaskell.Complete
                       Jupyter.IHaskell.Evaluate
                       Jupyter.IHaskell.Interpreter
                       Jupyter.IHaskell.Parser
  
  if flag(binPkgDb)
    build-depends:       bin-package-db

executable ihaskell
  main-is:             Main.hs
  hs-source-dirs:      main
  other-modules:       Paths_ihaskell
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:
                       base          >=4.8 && <= 4.9,
                       ihaskell      -any,
                       jupyter       >= 0.9

  if flag(binPkgDb)
    build-depends:       bin-package-db

Test-Suite test-ihaskell
    Type:             exitcode-stdio-1.0
    ghc-options:      -threaded
    main-is:          Test.hs
    other-modules:
                      Jupyter.IHaskell.Test.Complete
                      Jupyter.IHaskell.Test.Parser
    hs-source-dirs:   tests
    default-language: Haskell2010
    build-depends:
                      base          >= 4.8,
                      ihaskell      -any,
                      transformers  >= 0.4,
                      tasty         >= 0.7,
                      tasty-hunit   >= 0.9,
                      ghc-paths     >= 0.1,
                      text          >= 1.2,
                      extra, 
                      directory >= 1.2


    if flag(binPkgDb)
        build-depends: bin-package-db
