name:                ipython-kernel
version:             0.8.4.0
synopsis:            A library for creating kernels for IPython frontends

description:         ipython-kernel is a library for communicating with frontends for the interactive IPython framework. It is used extensively in IHaskell, the interactive Haskell environment.
homepage:            http://github.com/gibiansky/IHaskell
license:             MIT
license-file:        LICENSE
author:              Andrew Gibiansky
maintainer:          andrew.gibiansky@gmail.com

category:            Development
build-type:          Simple

cabal-version:       >=1.16

data-dir:            example-data
data-files:          calc_profile.tar


flag examples
  description: Build example programs
  default:     False


library
  exposed-modules: IHaskell.IPython.Kernel
                   IHaskell.IPython.Types
                   IHaskell.IPython.ZeroMQ
                   IHaskell.IPython.Message.Writer
                   IHaskell.IPython.Message.Parser
                   IHaskell.IPython.Message.UUID
                   IHaskell.IPython.EasyKernel
  other-extensions:    OverloadedStrings
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base            >=4.6 && < 4.9,
                       aeson           >=0.6 && < 0.12,
                       bytestring      >=0.10,
                       cereal          >=0.3,
                       containers      >=0.5,
                       directory       >=1.1,
                       temporary       >=1.2,
                       filepath        >=1.2,
                       process         >=1.1,
                       mtl             >=2.1,
                       text            >=0.11,
                       transformers    >=0.3,
                       unordered-containers >= 0.2.5,
                       uuid            >=1.3,
                       zeromq4-haskell >=0.1,
                       SHA             >=1.6

-- Example program
executable simple-calc-example
  hs-source-dirs: examples
  main-is:        Calc.hs
  build-depends:  ipython-kernel,
                  base           >=4.6 && <4.9,
                  filepath       >=1.2,
                  mtl            >=2.1,
                  parsec         >=3.1,
                  text           >=0.11,
                  transformers   >=0.3

  if !flag(examples)
    buildable: False

executable fun-calc-example
  hs-source-dirs: examples
  main-is:        Simple.hs
  build-depends:  ipython-kernel,
                  base           >=4.6 && <4.9,
                  filepath       >=1.2,
                  mtl            >=2.1,
                  parsec         >=3.1,
                  text           >=0.11,
                  transformers   >=0.3

  if !flag(examples)
    buildable: False
